2008-05-26  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Darin Adler.
        
        Fixed <rdar://problem/5960859> After an eval of a non-string or a syntax
        error, all profile stack frames are incorrect
        
        SunSpider reports a .3% speedup, possibly because eval of a string is a
        little more efficient now.

        * VM/Machine.cpp:
        (KJS::callEval): Make sure to call didExecute when returning early. I
        simplified this function to remove one early return, making the job
        of adding special code to early returns easier.

        (KJS::Machine::execute): Use the new function ExecState when notifying
        the profiler. (This doesn't change behavior now, but it might prevent
        subtle errors in the future.)

2008-05-23  Anders Carlsson  <andersca@apple.com>

        Reviewed by Geoff.

        <rdar://problem/5959886> REGRESSION: Assertion failure in JSImmediate::toString when loading GMail (19217)
        
        Change List to store a JSValue*** pointer + an offset instead of a JSValue** pointer to protect against the case where 
        a register file changes while a list object points to its buffer.
        
        * VM/Machine.cpp:
        (KJS::Machine::privateExecute):
        * kjs/JSActivation.cpp:
        (KJS::JSActivation::createArgumentsObject):
        * kjs/list.cpp:
        (KJS::List::getSlice):
        * kjs/list.h:
        (KJS::List::List):
        (KJS::List::at):
        (KJS::List::append):
        (KJS::List::begin):
        (KJS::List::end):
        (KJS::List::buffer):

2008-05-23  Kevin McCullough  <kmccullough@apple.com>

        Reviewed by Sam.

        <rdar://problem/5960012> JSProfiler: Stack overflow if recursion is
        too deep.
        -Use a simple depth limit to restrict too deep of recursion.

        * profiler/Profile.cpp:
        (KJS::Profile::willExecute):
        (KJS::Profile::didExecute):
        * profiler/Profile.h:
