@@ -1,0 +1,11 @@
+Tests that declaring a const variable without initializing has the correct behavior and does not crash
+
+On success, you will see a series of "PASS" messages, followed by "TEST COMPLETE".
+
+
+PASS f is undefined
+PASS f is undefined
+PASS successfullyParsed is true
+
+TEST COMPLETE
+
